Bug 583028 - Hold on to a runnable while it's outstanding, and add proxies for it to notify when it does get run. This makes us delay onload less. r=bholley a=blocking